--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
-astroid==2.2.5
-Click==7.0
-Flask==1.1.1
-Flask-SocketIO==4.2.1
+astroid==2.4.2
+click==7.1.2
+Flask==1.1.2
+Flask-SocketIO==4.3.1
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.2
+jedi==0.17.2
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pylint==2.3.1
-python-engineio==3.9.3
-python-socketio==4.3.1
-six==1.12.0
-typed-ast==1.4.0
-Werkzeug==0.15.5
-wrapt==1.11.2
+parso==0.7.1
+pycodestyle==2.6.0
+pylint==2.5.3
+python-engineio==3.13.1
+python-socketio==4.6.0
+six==1.15.0
+toml==0.10.1
+typed-ast==1.4.1
+Werkzeug==1.0.1
+wrapt==1.12.1
